Add present movie endpoint and logic
